load(
    "@rules_swift_tidy//swiftformat:defs.bzl",
    "swiftformat_binary",
)

# Defines a swift_binary and swiftformat_pkg.
swiftformat_binary(
    name = "simple",
    swiftformat_config = "//:.swiftformat",
    swiftformat_exclude = ["PoorlyFormatted.swift"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//Sources/Foo",
    ],
)
