load(
    "@rules_swift_tidy//swiftformat:defs.bzl",
    "swiftformat_binary",
)

# Defines a swift_binary and swiftformat_pkg.
swiftformat_binary(
    name = "simple",
    srcs = ["main.swift"],
    swiftformat_config = "//:.swiftformat",
    visibility = ["//:__subpackages__"],
    deps = [
        "//Sources/Foo",
    ],
)
